--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,7 @@
   font-family: monospace;
   position: absolute;
   font-size: 30px;
+  transition: all .7s ease-in-out;
   -webkit-transform: rotate(-45deg); 
   -moz-transform: rotate(-45deg); 
   color: #F6BDD1;
@@ -46,6 +47,7 @@
   display: flex;
   background-color: darkgrey;
   margin: auto;
+  transition: all .7s ease-in-out;
   height: 100px;
   border-radius: 5px;
 }
@@ -55,6 +57,7 @@
   display: flex;
   width: 100px;
   background-color: #fff;
+  transition: all .7s ease-in-out;
   margin: auto;
   height: 100px;
 }
@@ -63,6 +66,7 @@
   box-shadow: 0px 0px 30px 4px rgba(0, 0, 0, 0.6);
   display: flex;
   border-radius: 5px;
+  transition: all .7s ease-in-out;
   margin: auto;
   background-color: darkgrey;
   width: 250px;
@@ -73,6 +77,7 @@
   box-shadow: inset 0px 0px 30px 4px rgba(0, 0, 0, 0.6);
   display: flex;
   margin: auto;
+  transition: all .7s ease-in-out;
   background-color: #fff;
   width: 250px;
   height: 250px;
@@ -84,6 +89,7 @@
   margin: auto;
   background-color: #87A878;
   height: 400px;
+  transition: all .7s ease-in-out;
   width: 400px;
   border-radius: 5px;
 }
@@ -91,8 +97,19 @@
 .LargeDown {
   box-shadow: inset 0px 0px 30px 4px rgba(0, 0, 0, 0.6);
   display: flex;
+  transition: all .7s ease-in-out;
   background-color: #87A878;
   margin: auto;
   height: 400px;
   width: 400px;
+}
+
+.SmallUp:hover, .MediumUp:hover, .LargeUp:hover, .Text:hover {
+  transform: scale(1.05);
+  cursor: pointer;
+}
+
+.SmallDown:hover, .MediumDown:hover, .LargeDown:hover {
+  filter: brightness(90%);
+  cursor: pointer;
 }
