--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,9 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 100%;
+  height: 100vh;
+  overflow: hidden;
   background-color: #B1DDF1;
   justify-content: center;
 }
@@ -16,6 +19,18 @@
   -moz-transform: rotate(-45deg); 
   color: #F6BDD1;
   text-shadow: black 1px 0 10px;
+}
+
+.PhoneText {
+  font-family: monospace;
+  position: absolute;
+  font-size: 30px;
+  transition: all .7s ease-in-out;
+  -webkit-transform: rotate(-45deg); 
+  -moz-transform: rotate(-45deg); 
+  color: #F6BDD1;
+  text-shadow: black 1px 0 10px;
+  display: none
 }
 
 .TopContainer {
@@ -112,4 +127,19 @@
 .SmallDown:hover, .MediumDown:hover, .LargeDown:hover {
   filter: brightness(90%);
   cursor: pointer;
+}
+
+@media (max-width: 1350px) {
+  .TopContainer {
+    display: none;
+  }
+  .BottomContainer {
+    display: none;
+  }
+  .Text {
+    display: none;
+  }
+  .PhoneText {
+    display: inline
+  }
 }
