--- a/src/App.css
+++ b/src/App.css
@@ -36,22 +36,34 @@
 
 .TopContainer {
   height: 50%;
-  width: 85%;
+  width: 100%;
   display: flex;
-  margin-left: 15%;
   flex-direction: row;
 }
 
 .BottomContainer {
   height: 50%;
-  width: 85%;
-  margin-right: 15%;
+  width: 100%;
   display: flex;
   flex-direction: row;
 }
 
+.SocialWrap {
+  height: 50vh;
+  display: flex;
+  flex-direction: column;
+  width: 15%
+}
+
+.SocialIcon {
+  width: 40px;
+  height: 40px;
+  color: #87A878;
+  margin: auto;
+}
+
 .SectionWrap {
-  width: 33%;
+  width: 40%;
   min-width: fit-content;
   display: flex;
   height: 50vh;
@@ -124,6 +136,16 @@
   margin: auto;
   height: 400px;
   width: 400px;
+}
+
+.SocialIcon:hover {
+  color:#F6BDD1;
+  transition: all .5s ease-in-out;
+  transform: scale(1.05);
+  cursor: pointer;
+  filter: brightness(103%);
+  -webkit-transform: rotate(-360deg); 
+  -moz-transform: rotate(-360deg); 
 }
 
 .SmallUp:hover, .MediumUp:hover, .LargeUp:hover, .Text:hover, .PhoneText:hover {
