--- a/src/App.css
+++ b/src/App.css
@@ -55,6 +55,12 @@
   width: 15%
 }
 
+.SocialIconWrap {
+  height: fit-content;
+  width: fit-content;
+  margin:auto;
+}
+
 .SocialIcon {
   width: 40px;
   height: 40px;
@@ -141,9 +147,9 @@
 
 .SocialIcon:hover {
   color:#F6BDD1;
-  transform: scale(1.3);
   cursor: pointer;
   filter: brightness(103%);
+  animation: tilt-shaking .25s infinite;
 }
 
 .SmallUp:hover, .MediumUp:hover, .LargeUp:hover, .Text:hover, .PhoneText:hover {
@@ -170,4 +176,13 @@
   .PhoneText {
     display: inline
   }
+}
+
+
+@keyframes tilt-shaking {
+  0% { transform: scale(1.2) translate(0, 0) rotate(0deg); }
+  25% { transform: scale(1.2) translate(5px, 5px) rotate(5deg); }
+  50% { transform: scale(1.2) translate(0, 0) rotate(0eg); }
+  75% { transform: scale(1.2) translate(-5px, 5px) rotate(-5deg); }
+  100% { transform: scale(1.2) translate(0, 0) rotate(0deg); }
 }
