fixed css background

--- a/src/components/projects/projectCode/CssBackground.module.css
+++ b/src/components/projects/projectCode/CssBackground.module.css
@@ -1,6 +1,7 @@
 .BoxWrapper {
     display: flex;
     flex-wrap: wrap;
+    background-color: #A0ECD0;
     height: inherit;
     width: inherit;
   }
