--- a/src/App.css
+++ b/src/App.css
@@ -21,6 +21,22 @@
   -ms-overflow-style: none;  /* Internet Explorer 10+ */
   scrollbar-width: none;  /* Firefox */
 }
+.Section2 {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  height: 100vh;
+  overflow: hidden;
+  overflow-y: scroll;
+  background-color: #7e5a9b;
+  justify-content: center;
+  box-shadow: 0px 0px 30px 4px rgba(0, 0, 0, 0.6);
+  z-index: 2;
+  -ms-overflow-style: none;  /* Internet Explorer 10+ */
+  scrollbar-width: none;  /* Firefox */
+}
 
 .App::-webkit-scrollbar { 
   display: none;  /* Safari and Chrome */
@@ -39,15 +55,29 @@
   text-shadow: black 1px 0 10px;
 }
 
+.PhoneTextWrapper {
+  height: 50%;
+  width: 90%;
+  display: block;
+  text-align: left;
+  position: absolute;
+  display: none;
+  top: 0;
+}
+
 .PhoneText {
   font-family: monospace;
-  position: absolute;
-  font-size: 30px;
+  font-size: 24px;
   transition: all .7s ease-in-out;
-  -webkit-transform: rotate(-45deg); 
-  -moz-transform: rotate(-45deg); 
   color: #FAFFC7;
+  text-align: justify;
   text-shadow: black 1px 0 10px;
+  display: none
+}
+
+.MobileSocials{
+  height: 50%;
+  width: 100%;
   display: none
 }
 
@@ -138,7 +168,6 @@
   -webkit-transform: rotate(90deg); 
   -moz-transform: rotate(90deg); 
   margin: auto;
-  background-color: darkgrey;
   width: 250px;
   height: 250px;
 }
@@ -148,7 +177,6 @@
   display: flex;
   margin: auto;
   transition: all .7s ease-in-out;
-  background-color: #fff;
   width: 250px;
   height: 250px;
 }
@@ -190,7 +218,7 @@
   animation: tilt-shaking .25s infinite;
 }
 
-.SmallUp:hover, .MediumUp:hover, .LargeUp:hover, .PhoneText:hover {
+.SmallUp:hover, .MediumUp:hover, .LargeUp:hover {
   transform: scale(1.05);
   text-decoration: none;
   filter: brightness(103%)
@@ -208,7 +236,10 @@
 
 }
 
-@media (max-width: 1200px) {
+@media (max-width: 768px) {
+  .Section2 {
+    Display: none;
+  }
   .TopContainer {
     display: none;
   }
@@ -219,7 +250,33 @@
     display: none;
   }
   .PhoneText {
-    display: inline
+    display: flex;
+    flex-direction: column;
+  }
+  .PhoneTextWrapper {
+    display: flex;
+  }  
+  .MobileSocials {
+    display: flex;
+    position: absolute;
+    bottom: 0;
+    flex-wrap: wrap;
+  }
+  .SocialIcon {
+    height: 50%;
+    width: 50%;
+    height: 50%;
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .SocialIcon:hover {
+    animation: none;
+    color:#FFCCE1;
+    cursor: pointer;
+    filter: none;
+    animation: none; 
   }
 }
 
